# neox-tools

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  script_decomp.sh
scripts/: C_file.py  __init__.py  decompile_pyc.py  pyc_decryptor.py  pymarshal.py  rotor2.py  script_decomp.sh  script_redirect.py
src/: main.rs
tools/: pymarshal.py  script_redirect.py
