[package]
name = "npktool"
version = "0.1.0"
authors = ["Alexander Guettler <alexander@guettler.io>"]
edition = "2018"

[dependencies]
clap = "3.2.14"
byteorder = "1.4.3"
log = "0.4.17"
simple_logger = "2.2.0"
compress = "0.2.1"
tree_magic = "0.2.3"
bytesize = "1.1.0"
regex = "1.6.0"
murmur3 = "0.5.1"
indicatif = "0.16.2"
